@@ -158,6 +158,7 @@ dist_svcweb_DATA = \
 	www/portal/slices.php \
 	www/portal/sliverdelete.php \
 	www/portal/sliverstatus.php \
+	www/portal/speaks-for.css \
 	www/portal/speaks-for.js \
 	www/portal/speaks-for.php \
 	www/portal/speaks-for-delete.php \
