@@ -1,0 +1,26 @@
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+
+.windowOpen {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.windowOpen > div {
+	text-align: center;
+	position: absolute;
+	top: 273px;
+	width: 553px;
+	left: 50%;
+	margin-left: -276px;
+	color: #333;
+	background-color: #f5f5f5;
+	border-color: #DDD;
+}
