@@ -34,7 +34,20 @@ portal.authorize = function()
       default_ma.url = ma_url_elem.innerHTML;
       default_ma.name = ma_name_elem.innerHTML;
   }
-  genilib.authorize(tool_urn, tool_cert, portal.authZResponse, default_ma);
+  certWindow = genilib.authorize(tool_urn, tool_cert, portal.authZResponse,
+                                 default_ma);
+  $(certWindow.document).ready(function() {
+      $('.windowOpen').removeClass('hidden');
+      $(certWindow).focus();
+
+      var interv = window.setInterval(function() {
+          if (certWindow.closed !== false) {
+              window.clearInterval(interv);
+              $('.windowOpen').addClass('hidden');
+          }
+      }, 250);
+  });
+
   return false;
 }
 portal.authZResponse = function(speaks_for_cred)
